# espeak-embedded

./: .gitmodules  Cargo.toml  README.md
src/: bindings.rs  logger.rs  main.rs
sys/: Cargo.toml  build.rs
sys/src/: lib.rs
